<resources>
    <string name="require_restart_app">Need to restart the application to take effect</string>
    <string name="format_hh_mm" formatted="false">%02d:%02d</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_not_now">Back</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_dontshow">No longer show</string>
    <string name="btn_confirm">OK</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_modify_confirm">Confirm changes</string>
    <string name="btn_help">Help</string>
    <string name="btn_iknow">Got it</string>
    <string name="btn_exit">Quit</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_reboot">Restart</string>
    <string name="btn_resume_selected">Restore selected</string>
    <string name="make_choice">Please confirm</string>
    <string name="download">Download</string>
    <string name="error_su_timeout">Wait for timeout, please make sure your Root Manager is running in the background and try again! \n\nPlease make sure you have not prevented "Authorization Manager (SuperSu, Magisk Manager, etc.)" from starting itself and allowing background pop-ups, hover windows, and other permissions. If the authorization dialog box never pops up, we suggest restarting the phone and trying again! \n</string>
    <string name="error_root">Sorry, didn\'t get ROOT permission</string>
    <string name="error_root_desc">Without ROOT permission, you will lose many features. \nIf you miss the authorization prompt or don\'t see the pop-up window, please find your ROOT manager and manually set to allow Scene to use ROOT permission~</string>
    <string name="question_install_busybox">Install Busybox?</string>
    <string name="question_install_busybox_desc">Your phone doesn\'t seem to have busybox installed, which will make Scene unusable, should I install it immediately (need to modify System)?</string>
    <string name="share_link">You should try Scene too, I think it\'s not bad, download address: \n http://vtools.omarea.com/</string>
    <string name="app_name">Scene5</string>
    <string name="app_name_short">Scene5 OpenSource</string>
    <string name="app_name_mode_switch">Scene-Quick switch mode</string>
    <string name="backup_action_title_boot">Export Boot</string>
    <string name="backup_action_desc_boot">Backup the currently used Boot as img, copy it to /sdcard/boot.img</string>
    <string name="restore_action_title_boot">Brush Boot</string>
    <string name="restore_action_desc_boot">Select boot.img to be flushed</string>
    <string name="backup_action_title_rec">Export Recovery</string>
    <string name="backup_action_desc_rec">Backup the currently used exported Recovery as img, copy it to /sdcard/recovery.img</string>
    <string name="restore_action_title_rec">Refresh Recovery</string>
    <string name="restore_action_desc_rec">Select to flush to recovery.img</string>
    <string name="backup_action_title_dtbo">Export DTBO partition</string>
    <string name="backup_action_desc_dtbo">Export DTBO partition to img image, copy it to /sdcard/dtbo.img</string>
    <string name="restore_action_title_dtbo">Brush DTBO image</string>
    <string name="restore_action_desc_dtbo">Select to swipe into dtbo.img</string>
    <string name="backup_action_title_persist">Export Persist partition</string>
    <string name="backup_action_desc_persist">Export Persist partition to img image, copy it to /sdcard/persist.img</string>
    <string name="restore_action_title_persist">Swipe in Persist image</string>
    <string name="restore_action_desc_persist">Select to swipe persist.img</string>
    <string name="backup_file_exists">Overwrite file?</string>
    <string name="backup_img_exists">/sdcard/%s.img already exists, do you want to overwrite the existing file? \n</string>
    <string name="backup_space_small">Insufficient storage space, please set aside at least 200M free space!</string>
    <string name="autobooster_tab_details">Blacklist setting</string>
    <string name="autobooster_tab_system_scene">System scenario</string>
    <string name="auto_clear_ignore_chager">Charging state ignore</string>
    <string name="auto_clear_ignore_chager_desc">Charging state, the rest screen action is delayed until charging is completed</string>
    <string name="settings_disable_selinux">SeLinux tolerance mode</string>
    <string name="settings_disable_selinux_desc">Switch SELinux to tolerant mode (some software called [turn off Selinux]), SeLinux state has no effect on Scene, and turn on tolerant mode may crash and reboot!</string>
    <string name="settings_theme">Theme color</string>
    <string name="settings_debug_layer">Debug window</string>
    <string name="settings_debug_layer_desc">Show the log of Scene\'s foreground application process (need to restart accessibility services)</string>
    <string name="settings_help_icon">Tip icon</string>
    <string name="settings_help_icon_desc">Show function description hint (question mark) icon next to function item</string>
    <string name="settings_auto_exit">Auto-quit on exception</string>
    <string name="settings_auto_exit_desc">Automatically end the process when an exception occurs during operation to avoid white screen jamming</string>
    <string name="settings_logcat_title">Error log</string>
    <string name="settings_logcat_desc">When Scene flickers with errors, click the button below to grab the log via logcat and send it to the developer to solve the problem.</string>
    <string name="settings_black_notification">Black notification background</string>
    <string name="settings_black_notification_desc">Show Scene\'s resident notifications as black background when the system is in night mode (no need to turn on this option under normal conditions)</string>
    <string name="menu_home">Overview</string>
    <string name="menu_scene_mode">Scene mode</string>
    <string name="menu_app_scene">App scene</string>
    <string name="menu_system_scene">System scene </string>
    <string name="menu_auto_click">Auto click</string>
    <string name="menu_cpu_modes">CPU modes</string>
    <string name="menu_freeze">App freeze</string>
    <string name="menu_battery_stats">Battery stats</string>
    <string name="menu_battery_stats_desc">View the power consumption (current) data recorded during application use</string>
    <string name="menu_core_control">CPU control</string>
    <string name="menu_sundry">Misc </string>
    <string name="menu_additional">Additional</string>
    <string name="menu_applictions">App mgr</string>
    <string name="menu_swap">SWAP menu</string>
    <string name="menu_battery">Charge ctrl</string>
    <string name="menu_charge">Charge stats</string>
    <string name="menu_power_utilization">Power util</string>
    <string name="menu_custom_command">Custom command</string>
    <string name="menu_processes">Process mgr </string>
    <string name="menu_modules">Magisk mgr</string>
    <string name="menu_fps_chart">FPS record</string>
    <string name="menu_app_magisk">Extra Module</string>
    <string name="menu_gesture">Gesture</string>
    <string name="menu_filter">Screen filter</string>
    <string name="menu_img">Backup restore </string>
    <string name="menu_qq">QQ</string>
    <string name="menu_menu_title">Feedback</string>
    <string name="menu_share">Share app</string>
    <string name="menu_miui_thermal">MIUI thermal</string>
    <string name="menu_section_performance">Equipment performance</string>
    <string name="menu_section_power">Charging power consumption</string>
    <string name="menu_section_advanced">Advanced Features</string>
    <string name="home_alive">Alive</string>
    <string name="home_official_site">Official website</string>
    <string name="system">System</string>
    <string name="accessibility_running">Accessibility Services Activated</string>
    <string name="accessibility_stoped">Click here to activate accessibility services</string>
    <string name="accessibility_service_description">Scene enhanced service\nYou need to activate this service to use the following functions:\n\n1. Dynamic response (automatically adjust performance according to the foreground application).\n\n2. Automatic behavior (in the switch Recycle the process when switching networks or switching applications when the screen is displayed).\n\n3. Automatic installation (automatically click next when installing third-party applications)</string>
    <string name="accessibility_please_activate"> Please activate the [Scene Accessibility Service] option in the system settings</string>
    <string name="accessibility_activate"> Accessibility services are not activated, click here to activate</string>
    <string name="accessibility_activate_desc"> According to the application to adjust performance, automatically switch GPS, record power consumption speed, all need to activate this service </string>
    <string name="battery_title">Battery:.</string>
    <string name="battery_title_desc1">If you want to use the "charge speed" and "charge protection" functions, please make sure to keep Scene running in the background!</string>
    <string name="battery_reality_limit">Actual current limit.</string>
    <string name="battery_pd_allowed">USB-PD fast charging</string>
    <string name="battery_pd_allowed_desc">The phone will decide whether to activate USB-PD charging or not based on compatibility, no manual setting is needed. Manual switching will result in slow charging speed, so no manual changes are allowed!</string>
    <string name="battery_pd_active_state">Current status.</string>
    <string name="battery_pd_active_1">Entered PD fast charging mode</string>
    <string name="battery_pd_active_0">Not in PD fast charging mode</string>
    <string name="battery_auto_boot_desc">OK, if you want the phone to reboot and turn on this function automatically, please allow Scene to boot up!</string>
    <string name="battery_qc_rehoot_desc">Charging acceleration service is disabled, you may need to reboot your phone to restore the default setting!</string>
    <string name="battery_pd_active_unknown">Unknown</string>
    <string name="battery_uevent_title">$ bms/uevent</string>
    <string name="battery_usb_uevent_title">$ usb/uevent</string>
    <string name="battery_night_mode_time" formatted="false">%02d:%02d</string>
    <string name="battery_night_mode">Dynamic charging speed</string>
    <string name="battery_night_mode_desc">$ slow charge when close to full \n\n and actively reduce charge speed at night</string>
    <string name="battery_time_get_up">Wake up time</string>
    <string name="battery_time_sleep">Time to go to sleep</string>
    <string name="battery_manual_control">Manual control</string>
    <string name="battery_charge_disable">Disable charging</string>
    <string name="battery_charge_resume">Resume charging</string>
    <string name="battery_usage_history">Battery usage record</string>
    <string name="battery_view_history">View records</string>
    <string name="battery_delete_history">Delete Record</string>
    <string name="battery_bp">Charge protection</string>
    <string name="system_scene_next_task">Next task</string>
    <string name="system_scene_resume_charge">Resume charging</string>
    <string name="system_scene_battery_left">Battery below</string>
    <string name="system_scene_battery_right">Battery above</string>
    <string name="system_scene_stop_charge">Stop charging</string>
    <string name="system_scene_timing_task">My Timed Tasks</string>
    <string name="system_scene_trigger">My Trigger</string>
</resources>