<?xml version="1.0" encoding="utf-8"?>
<com.omarea.common.ui.OverScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/system_scene_bp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                style="@style/ListCardItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_scene_battery_right" />

                <TextView
                    android:id="@+id/system_scene_bp_gt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="--" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_scene_stop_charge"
                    android:textAlignment="center"
                    android:textColor="?android:colorAccent" />
            </LinearLayout>

            <LinearLayout
                style="@style/ListCardItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_scene_battery_left" />

                <TextView
                    android:id="@+id/system_scene_bp_lt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="--" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_scene_resume_charge"
                    android:textAlignment="center"
                    android:textColor="?android:colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/system_scene_next"
            style="@style/ListCardItemClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_scene_next_task" />

            <FrameLayout
                android:id="@+id/system_scene_next_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/ListCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_scene_timing_task" />

            <LinearLayout
                android:id="@+id/system_scene_task_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/system_scene_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/add" />
        </LinearLayout>

        <LinearLayout
            style="@style/ListCardItemLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_scene_trigger" />

            <LinearLayout
                android:id="@+id/system_scene_trigger_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/system_scene_add_trigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/add" />
        </LinearLayout>
    </LinearLayout>
</com.omarea.common.ui.OverScrollView>
